# os-group

./: README.md
p1/: CMakeLists.txt  README.md  main.c  main.cpp  p1  t1  t2  t3  t4  t5  test1.c  test2.c  test3.c
p2/: CMakeLists.txt  README.md  main.c  main.cpp  p2  prod_cons_MT.c  prod_cons_MT.h  tempmain.cpp
p3/: README.md  makefile  output.txt  p3  p3.cpp  schAlgos.cpp  schAlgos.h
p4/: README.md  infile1.txt  infile2.txt  infile3.txt  infile4.txt  makefile  output1.txt  output2.txt  output3.txt  output4.txt  p4  p4.cpp  tFunctions.cpp  tFunctions.h  thread1.txt  thread2.txt  thread3.txt  thread4.txt
